# panel-example

./: Dockerfile  Procfile  README.md  credentials.json  pyproject.toml  requirements.txt
panel_example/: main.py
