[project]
name = "panel_example"
version = "0.1.0"
description = ""
authors = [
    {name = "Tom Barone",email = "mail@tombarone.net"}
]
requires-python = "3.12.9"
dependencies = [
    "panel (>=1.6.1,<2.0.0)",
    "hvplot (>=0.11.2,<0.12.0)",
    "watchfiles (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
